--- a/Class09/ng-intro/src/app/app.component.html
+++ b/Class09/ng-intro/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="app-container">
+  <app-header></app-header>
+
   <label>Enter Credentials</label>
   <input type="text" placeholder="Enter Username" />
   <input type="password" placeholder="Enter Password" />
