--- a/Class26/NgReview/ClientApp/src/app/items-container/items-container.component.html
+++ b/Class26/NgReview/ClientApp/src/app/items-container/items-container.component.html
@@ -1,2 +1,2 @@
-<app-item-list></app-item-list>
-<app-item-form></app-item-form>
+<app-items-form></app-items-form>
+<app-items-details></app-items-details>
