--- a/Class26/NgReview/ClientApp/src/app/items-details/items-details.component.html
+++ b/Class26/NgReview/ClientApp/src/app/items-details/items-details.component.html
@@ -1,19 +1,19 @@
 <table>
   <thead>
     <tr>
-      <th>ID</th>
+      <th>Id</th>
       <th>Name</th>
       <th>Description</th>
       <th>Action</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let item of items; let idx = index">
-      <td>{{ idx }}</td>
+    <tr *ngFor="let item of items">
+      <td>id</td>
       <td>{{ item.name }}</td>
       <td>{{ item.description }}</td>
       <td>
-        <button (click)="onDelete(idx)">Delete</button>
+        <button (click)="deleteItem(item.name)">Delete</button>
       </td>
     </tr>
   </tbody>
