--- a/Class26/NgReview/ClientApp/src/app/items-form/items-form.component.html
+++ b/Class26/NgReview/ClientApp/src/app/items-form/items-form.component.html
@@ -1,15 +1,17 @@
 <form (ngSubmit)="onSubmit()">
   <div>
     <label for="name">Name:</label>
-    <input type="text" name="name" [(ngModel)]="item.name" required />
+    <input type="text" name="name" id="name" [(ngModel)]="item.name" required />
   </div>
   <div>
     <label for="description">Description:</label>
     <textarea
       name="description"
+      id="description"
       [(ngModel)]="item.description"
       required
     ></textarea>
   </div>
+
   <button type="submit">Save</button>
 </form>
