--- a/Class27/NgReview/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/Class27/NgReview/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -3,8 +3,12 @@
 <p>This component demonstrates fetching data from the server.</p>
 
 <p *ngIf="!forecasts?.length"><em>Loading...</em></p>
-
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts.length">
+<!-- 
+<table
+  class="table table-striped"
+  aria-labelledby="tableLabel"
+  *ngIf="forecasts.length"
+>
   <thead>
     <tr>
       <th>Date</th>
@@ -21,4 +25,24 @@
       <td>{{ forecast.summary }}</td>
     </tr>
   </tbody>
+</table> -->
+<table mat-table [dataSource]="forecasts" class="mat-elevation-z8">
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let element">{{ element.date }}</td>
+  </ng-container>
+  <ng-container matColumnDef="temperatureC">
+    <th mat-header-cell *matHeaderCellDef>Temp. (C)</th>
+    <td mat-cell *matCellDef="let element">{{ element.temperatureC }}</td>
+  </ng-container>
+  <ng-container matColumnDef="temperatureF">
+    <th mat-header-cell *matHeaderCellDef>Temp. (F)</th>
+    <td mat-cell *matCellDef="let element">{{ element.temperatureF }}</td>
+  </ng-container>
+  <ng-container matColumnDef="summary">
+    <th mat-header-cell *matHeaderCellDef>Summary</th>
+    <td mat-cell *matCellDef="let element">{{ element.summary }}</td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
