--- a/Class27/NgReview/ClientApp/src/app/items-container/items-container.component.html
+++ b/Class27/NgReview/ClientApp/src/app/items-container/items-container.component.html
@@ -1,2 +1,6 @@
-<app-items-form></app-items-form>
+<app-items-form
+  [testInput]="test"
+  (testOutput)="onFormSubmit($event)"
+></app-items-form>
+<span>{{ outputValue }}</span>
 <app-items-details></app-items-details>
