--- a/Class27/NgReview/ClientApp/src/app/items-details/items-details.component.html
+++ b/Class27/NgReview/ClientApp/src/app/items-details/items-details.component.html
@@ -13,7 +13,14 @@
       <td>{{ item.name }}</td>
       <td>{{ item.description }}</td>
       <td>
-        <button (click)="deleteItem(item.name)">Delete</button>
+        <button
+          mat-icon-button
+          color="warn"
+          (click)="deleteItem(item.name)"
+          aria-label="Example icon button with a heart icon"
+        >
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </tr>
   </tbody>
