--- a/Class28/NgApi/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/Class28/NgApi/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -4,21 +4,37 @@
 
 <p *ngIf="!forecasts?.length"><em>Loading...</em></p>
 
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts.length">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Temp. (C)</th>
-      <th>Temp. (F)</th>
-      <th>Summary</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let forecast of forecasts">
-      <td>{{ forecast.date }}</td>
-      <td>{{ forecast.temperatureC }}</td>
-      <td>{{ forecast.temperatureF }}</td>
-      <td>{{ forecast.summary }}</td>
-    </tr>
-  </tbody>
+<table mat-table [dataSource]="forecasts" class="mat-elevation-z8">
+  <ng-container matColumnDef="date">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let element">
+      {{ element.date | date : "d/m/yyyy" }}
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="temperatureC">
+    <th mat-header-cell *matHeaderCellDef>Temp. (C)</th>
+    <td mat-cell *matCellDef="let element">{{ element.temperatureC }}</td>
+  </ng-container>
+  <ng-container matColumnDef="temperatureF">
+    <th mat-header-cell *matHeaderCellDef>Temp. (F)</th>
+    <td mat-cell *matCellDef="let element">{{ element.temperatureF }}</td>
+  </ng-container>
+  <ng-container matColumnDef="summary">
+    <th mat-header-cell *matHeaderCellDef>Summary</th>
+    <td mat-cell *matCellDef="let element">{{ element.summary }}</td>
+  </ng-container>
+  <ng-container matColumnDef="actions">
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button [matMenuTriggerFor]="menu">
+        <mat-icon>more_vert</mat-icon>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>Delete</button>
+        <button mat-menu-item>Edit</button>
+      </mat-menu>
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
