--- a/Class28/NgApi/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/Class28/NgApi/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -8,7 +8,7 @@
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef>Date</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.date | date : "d/m/yyyy" }}
+      {{ element.date | date : "medium" }}
     </td>
   </ng-container>
   <ng-container matColumnDef="temperatureC">
@@ -21,7 +21,9 @@
   </ng-container>
   <ng-container matColumnDef="summary">
     <th mat-header-cell *matHeaderCellDef>Summary</th>
-    <td mat-cell *matCellDef="let element">{{ element.summary }}</td>
+    <td mat-cell *matCellDef="let element">
+      {{ element.summary | uppercase }}
+    </td>
   </ng-container>
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Actions</th>
