--- a/Class29/PcPartsManager/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Class29/PcPartsManager/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -33,8 +33,13 @@
             >
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/fetch-data']"
-              >Fetch data</a
+            <a class="nav-link text-dark" [routerLink]="['/categories']"
+              >Categories</a
+            >
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/subcategories']"
+              >Sub Categories</a
             >
           </li>
         </ul>
