--- a/Class30/PcPartsManager/ClientApp/src/app/categories/add-category/add-category.component.html
+++ b/Class30/PcPartsManager/ClientApp/src/app/categories/add-category/add-category.component.html
@@ -1,6 +1,6 @@
 <p>add-category works!</p>
-<form (ngSubmit)="addCategory()">
+<form (ngSubmit)="addOrEditCategory()">
   <label>Name</label>
   <input type="text" name="name" [(ngModel)]="name" />
-  <button type="submit">Add</button>
+  <button type="submit">{{ id ? "Edit" : "Add" }}</button>
 </form>
