--- a/Class30/PcPartsManager/ClientApp/src/app/categories/categories-list/categories-list.component.html
+++ b/Class30/PcPartsManager/ClientApp/src/app/categories/categories-list/categories-list.component.html
@@ -1,5 +1,34 @@
 <p>categories-list works!</p>
+<mat-spinner *ngIf="!items"></mat-spinner>
+<table
+  *ngIf="items"
+  mat-table
+  [dataSource]="items.data"
+  class="mat-elevation-z8"
+>
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
 
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
+<mat-paginator
+  (page)="handlePageEvent($event)"
+  [length]="length"
+  [pageSize]="pageSize"
+  [showFirstLastButtons]="true"
+  [pageSizeOptions]="[1, 2, 5, 10]"
+  [pageIndex]="pageIndex"
+>
+</mat-paginator>
+
+<!-- 
 <ul>
   <li *ngFor="let item of items">
     <div>
@@ -12,9 +41,9 @@
       ></app-delete-category>
     </div>
     <div>
-      <button>Edit</button>
+      <button [routerLink]="['/edit-category/' + item.id]">Edit</button>
     </div>
   </li>
-</ul>
+</ul> -->
 
 <button routerLink="/add-category">Add Category</button>
