--- a/Class30/PcPartsManager/ClientApp/src/app/sub-categories/sub-categories-list/sub-categories-list.component.html
+++ b/Class30/PcPartsManager/ClientApp/src/app/sub-categories/sub-categories-list/sub-categories-list.component.html
@@ -1,2 +1,7 @@
 <p>sub-categories-list works!</p>
+
+<ul>
+  <li *ngFor="let item of items">{{ item.name }}</li>
+</ul>
+
 <button routerLink="/add-subcategory">Add Sub Category</button>
