--- a/Class31/PcPartsManager/ClientApp/src/app/app.component.html
+++ b/Class31/PcPartsManager/ClientApp/src/app/app.component.html
@@ -1,5 +1,26 @@
 <body>
-  <app-nav-menu></app-nav-menu>
+  <app-nav-menu>
+    <li
+      class="nav-item"
+      [routerLinkActive]="['link-active']"
+      [routerLinkActiveOptions]="{ exact: true }"
+    >
+      <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+    </li>
+    <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
+    </li>
+    <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/categories']"
+        >Categories</a
+      >
+    </li>
+    <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/subcategories']"
+        >Sub Categories</a
+      >
+    </li>
+  </app-nav-menu>
   <main class="container">
     <router-outlet></router-outlet>
   </main>
