--- a/Class31/PcPartsManager/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Class31/PcPartsManager/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -2,7 +2,7 @@
   <nav
     class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
   >
-    <div class="container">
+    <div [ngClass]="{ container: true }">
       <a class="navbar-brand" [routerLink]="['/']">PcPartsManager</a>
       <button
         class="navbar-toggler"
@@ -20,28 +20,7 @@
         [ngClass]="{ show: isExpanded }"
       >
         <ul class="navbar-nav flex-grow">
-          <li
-            class="nav-item"
-            [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/categories']"
-              >Categories</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/subcategories']"
-              >Sub Categories</a
-            >
-          </li>
+          <ng-content></ng-content>
         </ul>
       </div>
     </div>
