--- a/Class32/PcPartsManager/ClientApp/src/app/auth/login/login.component.html
+++ b/Class32/PcPartsManager/ClientApp/src/app/auth/login/login.component.html
@@ -1,9 +1,9 @@
-<!-- <form [formGroup]="form">
+<form [formGroup]="form">
   <fieldset>
     <legend>Login</legend>
     <div class="form-field">
-      <label>Email:</label>
-      <input name="email" formControlName="email" />
+      <label>Username:</label>
+      <input name="username" formControlName="username" />
     </div>
     <div class="form-field">
       <label>Password:</label>
@@ -13,4 +13,4 @@
   <div class="form-buttons">
     <button class="button button-primary" (click)="login()">Login</button>
   </div>
-</form> -->
+</form>
