--- a/Class32/PcPartsManager/ClientApp/src/app/app.component.html
+++ b/Class32/PcPartsManager/ClientApp/src/app/app.component.html
@@ -20,6 +20,12 @@
         >Sub Categories</a
       >
     </li>
+    <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/login']">Login</a>
+    </li>
+    <li class="nav-item" [routerLinkActive]="['link-active']">
+      <a class="nav-link text-dark" [routerLink]="['/register']">Register</a>
+    </li>
   </app-nav-menu>
   <main class="container">
     <router-outlet></router-outlet>
