--- a/Class33/PcPartsManager/ClientApp/src/app/app.component.html
+++ b/Class33/PcPartsManager/ClientApp/src/app/app.component.html
@@ -10,7 +10,11 @@
     <li class="nav-item" [routerLinkActive]="['link-active']">
       <a class="nav-link text-dark" [routerLink]="['/counter']">Counter</a>
     </li>
-    <li class="nav-item" [routerLinkActive]="['link-active']">
+    <li
+      *ngIf="hasPermission(['category', 'category.view'])"
+      class="nav-item"
+      [routerLinkActive]="['link-active']"
+    >
       <a class="nav-link text-dark" [routerLink]="['/categories']"
         >Categories</a
       >
